--- a/components/printers/sample/selectprinter.lpi
+++ b/components/printers/sample/selectprinter.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="/"/>
+    <PathDelim Value="\"/>
     <Version Value="5"/>
     <General>
       <Flags>
@@ -16,44 +16,45 @@
     <LazDoc Paths=""/>
     <Units Count="4">
       <Unit0>
-        <CursorPos X="41" Y="12"/>
+        <CursorPos X="1" Y="14"/>
         <Filename Value="selectprinter.lpr"/>
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="selectprinter"/>
-        <UsageCount Value="114"/>
+        <UsageCount Value="140"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="17" Y="24"/>
+        <CursorPos X="29" Y="32"/>
         <EditorIndex Value="0"/>
         <Filename Value="frmselprinter.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmselprinter.lrs"/>
-        <TopLine Value="20"/>
+        <TopLine Value="21"/>
         <UnitName Value="frmselprinter"/>
-        <UsageCount Value="114"/>
+        <UsageCount Value="140"/>
       </Unit1>
       <Unit2>
-        <CursorPos X="15" Y="27"/>
-        <Filename Value="C:/lazarus/components/printers/win32/winprndialogs.inc"/>
-        <IsPartOfProject Value="True"/>
-        <TopLine Value="45"/>
-        <UnitName Value="text"/>
-        <UsageCount Value="60"/>
-      </Unit2>
-      <Unit3>
-        <CursorPos X="1" Y="1"/>
-        <Filename Value="C:/lazarus/components/printers/linux/cupsprndialogs.inc"/>
+        <CursorPos X="10" Y="296"/>
+        <Filename Value="C:\lazarus\components\PRINTERS\WIN32\winprndialogs.inc"/>
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="text"/>
-        <UsageCount Value="60"/>
+        <UsageCount Value="86"/>
+      </Unit2>
+      <Unit3>
+        <CursorPos X="1" Y="1"/>
+        <Filename Value="C:\lazarus\components\PRINTERS\LINUX\cupsprndialogs.inc"/>
+        <IsPartOfProject Value="True"/>
+        <TopLine Value="1"/>
+        <UnitName Value="text"/>
+        <UsageCount Value="86"/>
       </Unit3>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
+      <DestinationDirectory Value="$(TestDir)\publishedproject\"/>
       <IgnoreBinaries Value="False"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
       <ExcludeFileFilter Value="*.(bak|ppu|ppw|o|so);*~;backup"/>
@@ -61,7 +62,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <RequiredPackages Count="2">
@@ -77,19 +78,30 @@
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="5"/>
+    <PathDelim Value="\"/>
     <SearchPaths>
-      <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
+      <SrcPath Value="$(LazarusDir)\lcl\;$(LazarusDir)\lcl\interfaces\$(LCLWidgetType)\"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
+        <IncludeAssertionCode Value="True"/>
         <DelphiCompat Value="True"/>
         <UseAnsiStrings Value="True"/>
       </SyntaxOptions>
     </Parsing>
     <CodeGeneration>
+      <Checks>
+        <IOChecks Value="True"/>
+        <RangeChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+        <StackChecks Value="True"/>
+      </Checks>
       <Generate Value="Faster"/>
     </CodeGeneration>
     <Linking>
+      <Debugging>
+        <GenerateDebugInfo Value="True"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
@@ -102,19 +114,25 @@
     <CompileReasons Run="False"/>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="1">
-      <Item1>
-        <Source Value="C:/lazarus/components/printers/win32/winprndialogs.inc"/>
-        <Line Value="20"/>
-      </Item1>
-    </BreakPoints>
-    <Watches Count="2">
+    <Watches Count="6">
       <Item1>
         <Expression Value="lpp.nCopies"/>
       </Item1>
       <Item2>
         <Expression Value="DevMode^.dmCopies"/>
       </Item2>
+      <Item3>
+        <Expression Value="PDev.DevMode.dmDriverExtra"/>
+      </Item3>
+      <Item4>
+        <Expression Value="AName"/>
+      </Item4>
+      <Item5>
+        <Expression Value="Pdev.name"/>
+      </Item5>
+      <Item6>
+        <Expression Value="pdev.name"/>
+      </Item6>
     </Watches>
   </Debugging>
 </CONFIG>
