added footers for local html docs
 SVN 8305@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -512,6 +512,8 @@ docs/Packages.txt svneol=native#text/plain
 docs/RemoteDebugging.txt svneol=native#text/plain
 docs/TODO svneol=native#text/plain
 docs/html/fpdoc.css svneol=native#text/css
+docs/html/locallclfooter.xml svneol=native#text/plain
+docs/html/localrtlfooter.xml svneol=native#text/plain
 docs/html/sourceforgefooter.xml svneol=native#text/xml
 docs/html/update_gtkintf_html.sh -text svneol=native#application/x-sh
 docs/html/update_html.sh -text svneol=native#application/x-sh
