added chm help viewer  from Andrew Haines
 SVN 8331@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,34 @@ components/cgi/ide/cgilazide.lpk svneol=native#text/pascal
 components/cgi/ide/cgilazideintf.pas svneol=native#text/pascal
 components/cgi/ide/lib/README.txt svneol=native#text/plain
 components/cgi/lib/README.txt svneol=native#text/plain
+components/chmhelp/democontrol/project1.lpi svneol=native#text/plain
+components/chmhelp/democontrol/project1.lpr svneol=native#text/plain
+components/chmhelp/democontrol/unit1.lfm svneol=native#text/plain
+components/chmhelp/democontrol/unit1.lrs svneol=native#text/plain
+components/chmhelp/democontrol/unit1.pas svneol=native#text/plain
+components/chmhelp/lhelp/back.xpm svneol=native#text/plain
+components/chmhelp/lhelp/chmdataprovider.pas svneol=native#text/plain
+components/chmhelp/lhelp/chmpopup.lfm svneol=native#text/plain
+components/chmhelp/lhelp/chmpopup.lrs svneol=native#text/plain
+components/chmhelp/lhelp/chmpopup.pas svneol=native#text/plain
+components/chmhelp/lhelp/chmspecialparser.pas svneol=native#text/plain
+components/chmhelp/lhelp/lhelp.lpi svneol=native#text/plain
+components/chmhelp/lhelp/lhelp.lpr svneol=native#text/plain
+components/chmhelp/lhelp/lhelpcontrol.pas svneol=native#text/plain
+components/chmhelp/lhelp/unit1.lfm svneol=native#text/plain
+components/chmhelp/lhelp/unit1.lrs svneol=native#text/plain
+components/chmhelp/lhelp/unit1.pas svneol=native#text/plain
+components/chmhelp/packages/chm/chmbase.pas svneol=native#text/plain
+components/chmhelp/packages/chm/chmpkg.lpk svneol=native#text/plain
+components/chmhelp/packages/chm/chmpkg.pas svneol=native#text/plain
+components/chmhelp/packages/chm/chmreader.pas svneol=native#text/plain
+components/chmhelp/packages/chm/paslzx.pas svneol=native#text/plain
+components/chmhelp/packages/help/lhelpcontrol.pas svneol=native#text/plain
+components/chmhelp/packages/help/lhelpcontrolpkg.lpk svneol=native#text/plain
+components/chmhelp/packages/help/lhelpcontrolpkg.pas svneol=native#text/plain
+components/chmhelp/packages/idehelp/chmhelppkg.lpk svneol=native#text/plain
+components/chmhelp/packages/idehelp/chmhelppkg.pas svneol=native#text/plain
+components/chmhelp/packages/idehelp/lazchmhelp.pas svneol=native#text/plain
 components/codetools/allcodetoolunits.pp svneol=native#text/pascal
 components/codetools/basiccodetools.pas svneol=native#text/pascal
 components/codetools/codeatom.pas svneol=native#text/pascal
