replaced some MessageDlg with QuestionDlg
 SVN 8332@trunk

--- a/doceditor/lazde.lpi
+++ b/doceditor/lazde.lpi
@@ -12,8 +12,9 @@
       <IconPath Value="./"/>
       <TargetFileExt Value=".exe"/>
       <Title Value="Lazarus Documentation Editor"/>
-      <ActiveEditorIndexAtStart Value="5"/>
+      <ActiveEditorIndexAtStart Value="6"/>
     </General>
+    <LazDoc Paths=""/>
     <Units Count="13">
       <Unit0>
         <CursorPos X="3" Y="9"/>
@@ -21,7 +22,7 @@
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="lazde"/>
-        <UsageCount Value="98"/>
+        <UsageCount Value="99"/>
       </Unit0>
       <Unit1>
         <CursorPos X="15" Y="803"/>
@@ -33,11 +34,11 @@
         <ResourceFilename Value="frmmain.lrs"/>
         <TopLine Value="787"/>
         <UnitName Value="FrmMain"/>
-        <UsageCount Value="98"/>
+        <UsageCount Value="99"/>
       </Unit1>
       <Unit2>
         <CursorPos X="1" Y="23"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="3"/>
         <Filename Value="frmoptions.pp"/>
         <ComponentName Value="OptionsForm"/>
         <IsPartOfProject Value="True"/>
@@ -45,11 +46,11 @@
         <ResourceFilename Value="frmoptions.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="frmOptions"/>
-        <UsageCount Value="95"/>
+        <UsageCount Value="96"/>
       </Unit2>
       <Unit3>
         <CursorPos X="1" Y="23"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="4"/>
         <Filename Value="frmnewnode.pp"/>
         <ComponentName Value="NewNodeForm"/>
         <IsPartOfProject Value="True"/>
@@ -57,11 +58,11 @@
         <ResourceFilename Value="frmnewnode.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="frmNewNode"/>
-        <UsageCount Value="92"/>
+        <UsageCount Value="93"/>
       </Unit3>
       <Unit4>
         <CursorPos X="32" Y="27"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="8"/>
         <Filename Value="frmmakeskel.pp"/>
         <ComponentName Value="MakeSkelForm"/>
         <IsPartOfProject Value="True"/>
@@ -69,11 +70,11 @@
         <ResourceFilename Value="frmmakeskel.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="FrmMakeSkel"/>
-        <UsageCount Value="69"/>
+        <UsageCount Value="70"/>
       </Unit4>
       <Unit5>
         <CursorPos X="11" Y="16"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="1"/>
         <Filename Value="frmlink.pp"/>
         <ComponentName Value="LinkForm"/>
         <IsPartOfProject Value="True"/>
@@ -81,11 +82,11 @@
         <ResourceFilename Value="frmlink.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="FrmLink"/>
-        <UsageCount Value="62"/>
+        <UsageCount Value="63"/>
       </Unit5>
       <Unit6>
         <CursorPos X="1" Y="23"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="2"/>
         <Filename Value="frmtable.pp"/>
         <ComponentName Value="TableForm"/>
         <IsPartOfProject Value="True"/>
@@ -93,11 +94,11 @@
         <ResourceFilename Value="frmtable.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="frmTable"/>
-        <UsageCount Value="62"/>
+        <UsageCount Value="63"/>
       </Unit6>
       <Unit7>
         <CursorPos X="35" Y="26"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="5"/>
         <Filename Value="frmabout.pp"/>
         <ComponentName Value="AboutForm"/>
         <IsPartOfProject Value="True"/>
@@ -105,7 +106,7 @@
         <ResourceFilename Value="frmabout.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="FrmAbout"/>
-        <UsageCount Value="53"/>
+        <UsageCount Value="54"/>
       </Unit7>
       <Unit8>
         <CursorPos X="22" Y="251"/>
@@ -113,17 +114,17 @@
         <IsPartOfProject Value="True"/>
         <TopLine Value="235"/>
         <UnitName Value="PkEditor"/>
-        <UsageCount Value="47"/>
+        <UsageCount Value="48"/>
       </Unit8>
       <Unit9>
         <CursorPos X="12" Y="521"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="9"/>
         <Filename Value="eleditor.pp"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <TopLine Value="500"/>
         <UnitName Value="ElEditor"/>
-        <UsageCount Value="47"/>
+        <UsageCount Value="48"/>
       </Unit9>
       <Unit10>
         <CursorPos X="34" Y="28"/>
@@ -131,11 +132,11 @@
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="FPDEUtil"/>
-        <UsageCount Value="47"/>
+        <UsageCount Value="48"/>
       </Unit10>
       <Unit11>
         <CursorPos X="15" Y="71"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="10"/>
         <Filename Value="frmexample.pp"/>
         <ComponentName Value="ExampleForm"/>
         <IsPartOfProject Value="True"/>
@@ -143,11 +144,11 @@
         <ResourceFilename Value="frmexample.lrs"/>
         <TopLine Value="66"/>
         <UnitName Value="FrmExample"/>
-        <UsageCount Value="38"/>
+        <UsageCount Value="39"/>
       </Unit11>
       <Unit12>
         <CursorPos X="19" Y="568"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="11"/>
         <Filename Value="frmbuild.pp"/>
         <ComponentName Value="BuildForm"/>
         <IsPartOfProject Value="True"/>
@@ -155,7 +156,7 @@
         <ResourceFilename Value="frmbuild.lrs"/>
         <TopLine Value="545"/>
         <UnitName Value="frmBuild"/>
-        <UsageCount Value="33"/>
+        <UsageCount Value="34"/>
       </Unit12>
     </Units>
     <PublishOptions>
