* Code to lfm update from Darius
 SVN 8391@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -917,6 +917,8 @@ ide/diffdialog.lfm svneol=native#text/plain
 ide/diffdialog.lrs svneol=native#text/plain
 ide/diffdialog.pas svneol=native#text/pascal
 ide/diffpatch.pas svneol=native#text/pascal
+ide/diskdiffsdialog.lfm svneol=native#text/plain
+ide/diskdiffsdialog.lrs svneol=native#text/pascal
 ide/diskdiffsdialog.pas svneol=native#text/pascal
 ide/editdefinetree.pas svneol=native#text/pascal
 ide/editoroptions.lfm svneol=native#text/plain
