--- a/.gitattributes
+++ b/.gitattributes
@@ -1011,6 +1011,8 @@ ide/progressdlg.lrs svneol=native#text/plain
 ide/progressdlg.pas svneol=native#text/plain
 ide/project.pp svneol=native#text/pascal
 ide/projectdefs.pas svneol=native#text/pascal
+ide/projectinspector.lfm svneol=native#text/plain
+ide/projectinspector.lrs svneol=native#text/pascal
 ide/projectinspector.pas svneol=native#text/pascal
 ide/projectopts.lfm svneol=native#text/plain
 ide/projectopts.lrs svneol=native#text/pascal
