converted helpmanager dialog to lfm  from Darius
 SVN 8407@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -945,6 +945,8 @@ ide/formeditor.pp svneol=native#text/pascal
 ide/frmsearch.lfm svneol=native#text/plain
 ide/frmsearch.lrs svneol=native#text/pascal
 ide/frmsearch.pas svneol=native#text/pascal
+ide/helpmanager.lfm svneol=native#text/plain
+ide/helpmanager.lrs svneol=native#text/plain
 ide/helpmanager.pas svneol=native#text/pascal
 ide/helpoptions.lfm svneol=native#text/plain
 ide/helpoptions.lrs svneol=native#text/pascal
