--- a/.gitattributes
+++ b/.gitattributes
@@ -176,6 +176,34 @@ components/mysql/registermysql.lrs svneol=native#text/pascal
 components/mysql/registermysql.pas svneol=native#text/pascal
 components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
+components/opengl/agl.pp svneol=native#text/plain
+components/opengl/example/mainunit.lfm svneol=native#text/plain
+components/opengl/example/mainunit.lrs svneol=native#text/plain
+components/opengl/example/mainunit.pas svneol=native#text/plain
+components/opengl/example/testopenglcontext1.lpi svneol=native#text/plain
+components/opengl/example/testopenglcontext1.lpr svneol=native#text/plain
+components/opengl/glcarbonaglcontext.pas svneol=native#text/plain
+components/opengl/glgtkglxcontext.pas svneol=native#text/plain
+components/opengl/gtk2x11/gdk2x.pas svneol=native#text/plain
+components/opengl/gtk2x11/gdk2x11.lpk svneol=native#text/plain
+components/opengl/gtk2x11/gdk2x11.pas svneol=native#text/plain
+components/opengl/gtk2x11/include/gdk2x11includes.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkdisplay-x11.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkdrawable-x11.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkinputprivate.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkpixmap-x11.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkprivate-x11.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkscreen-x11.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkwindow-x11.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gdkx.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/gxid_proto.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/mwmutil.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/xsettings-client.inc svneol=native#text/plain
+components/opengl/gtk2x11/include/xsettings-common.inc svneol=native#text/plain
+components/opengl/gtk2x11/scripts/gdkx11_h2pas.sh svneol=native#text/plain
+components/opengl/lazopenglcontext.lpk svneol=native#text/plain
+components/opengl/lazopenglcontext.pas svneol=native#text/plain
+components/opengl/openglcontext.pas svneol=native#text/plain
 components/prettyformat/pfidesource.pas svneol=native#text/plain
 components/prettyformat/prettyformat.lpk svneol=native#text/plain
 components/prettyformat/prettyformat.pas svneol=native#text/plain
