--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -85,22 +85,19 @@ LAZARUS_IDE_CONFIG=$(LAZARUS_CONFIG_DIR)/idemake.cfg
 LAZARUS_OPT=$(LAZARUS_LIBPATHS)
 
 #
-# big ide
-ifdef LAZARUS_BIG
-#LAZARUS_IDE_CONFIG=bigidemake.cfg
-#LAZARUS_CONFIG_DIR=.
-#LAZARUS_BIG_COMPONENT_DIRS=rtticontrols
-endif
-
-#
 # apptype gui
 ifeq ($(OS_TARGET),win32)
 LAZARUS_OPT+= -WG
 endif
 
+#
+# Options to compile an IDE with a lot of packages
+BIG_IDE_OPTIONS=-dBigIDE -Fu../components/rtticontrols/lib/$(CPU_TARGET)-$(OS_TARGET)
+
+
 #-----------------------------------------------------------------------------
 [rules]
-.PHONY: ide idepkg idebig starter all clean cleanide purge
+.PHONY: ide idepkg bigide starter all clean cleanide purge
 .SUFFIXES: .rc .res
 
 %.res: %.rc
@@ -126,6 +123,10 @@ endif
 #-----------------------------------------------------------------------------
 idepkg: $(COMPILER_UNITTARGETDIR)
         $(MAKE) --assume-new=../lazarus.pp lazarus$(EXEEXT) OPT='$(LAZARUS_OPT) $(OPT) @$(LAZARUS_IDE_CONFIG)'
+
+#-----------------------------------------------------------------------------
+bigide: $(COMPILER_UNITTARGETDIR)
+        $(MAKE) --assume-new=../lazarus.pp lazarus$(EXEEXT) OPT='$(OPT) $(BIG_IDE_OPTIONS)'
 
 #-----------------------------------------------------------------------------
 starter: $(COMPILER_UNITTARGETDIR)
