added printer4lazarus and cgilaz to bigide
 SVN 8413@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 * text=auto !eol
 /COPYING.modifiedLGPL -text svneol=unset#application/octet-stream
 components/README.txt svneol=native#text/plain
+components/cgi/Makefile svneol=native#text/plain
+components/cgi/Makefile.fpc svneol=native#text/plain
 components/cgi/cgilaz.lpk svneol=native#text/pascal
 components/cgi/cgimodules.pas svneol=native#text/pascal
 components/cgi/ide/README.txt svneol=native#text/plain
@@ -208,6 +210,8 @@ components/prettyformat/pfidesource.pas svneol=native#text/plain
 components/prettyformat/prettyformat.lpk svneol=native#text/plain
 components/prettyformat/prettyformat.pas svneol=native#text/plain
 components/prettyformat/ptopu.pp svneol=native#text/plain
+components/printers/Makefile svneol=native#text/plain
+components/printers/Makefile.fpc svneol=native#text/plain
 components/printers/linux/cupsdyn.pp svneol=native#text/pascal
 components/printers/linux/cupsprinters.inc svneol=native#text/pascal
 components/printers/linux/cupsprinters_h.inc svneol=native#text/pascal
@@ -557,6 +561,7 @@ doceditor/lazdeopts.pp svneol=native#text/pascal
 doceditor/pgeditor.pp svneol=native#text/pascal
 doceditor/pkedit.pp svneol=native#text/pascal
 doceditor/pkeditor.pp svneol=native#text/pascal
+docs/BigIDE.txt svneol=native#text/plain
 docs/Contributors.txt svneol=native#text/plain
 docs/CrossCompile.txt svneol=native#text/plain
 docs/DesignGuidelines.txt svneol=native#text/plain
