--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -92,8 +92,10 @@ endif
 
 #
 # Options to compile an IDE with a lot of packages
-BIG_IDE_OPTIONS=-dBigIDE -Fu../components/rtticontrols/lib/$(CPU_TARGET)-$(OS_TARGET)
-
+BIG_IDE_OPTIONS=-dBigIDE \
+  -Fu../components/rtticontrols/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/printers/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/cgi/lib/$(CPU_TARGET)-$(OS_TARGET)
 
 #-----------------------------------------------------------------------------
 [rules]
