--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -128,6 +128,7 @@ idepkg: $(COMPILER_UNITTARGETDIR)
 
 #-----------------------------------------------------------------------------
 bigide: $(COMPILER_UNITTARGETDIR)
+        -$(DEL) $(COMPILER_UNITTARGETDIR)/pkgmanager$(PPUEXT)
         $(MAKE) --assume-new=../lazarus.pp lazarus$(EXEEXT) OPT='$(OPT) $(BIG_IDE_OPTIONS)'
 
 #-----------------------------------------------------------------------------
