added LCLWidgetType makro for Makefile.fpc creation
 SVN 8417@trunk

--- a/components/printers/Makefile.fpc
+++ b/components/printers/Makefile.fpc
@@ -6,7 +6,7 @@ version=0.0.0.2
 
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
-unitdir=$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/gtk/ ../../packager/units/$(CPU_TARGET)-$(OS_TARGET)/ ./
+unitdir=$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)/ ../../packager/units/$(CPU_TARGET)-$(OS_TARGET)/ ./
 options=-gl
 
 [target]
